--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "githubIonic",
-  "app_id": "",
+  "app_id": "9214482b",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
